commit # : refactoring booking models using db normalization, booking id generation using MD5 algorithm.